@@ -24,6 +24,8 @@ Version 1.3.13+svn:
  * WML engine:
    * Fixed a problem where two [recall]s in a SP game could get an out of sync
      recruitment
+   * avoid triggering an assertion when a duplicated side definition exists
+     (bug #7252)
  * miscellaneous and bug fixes:
    * when loading a unit some traits didn't get applied correctly but got
      fixed in a later state. This could lead to some units not leveling 
